# pgdump2sqlite

./: .gitignore  Cargo.toml  LICENSE  readme.md
src/: lib.rs  main.rs  old_lib.rs  parser.rs  pgdump.pest
