[package]
name = "pgdump2sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
itertools = "0.11.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
thiserror = "1.0.50"
