[package]
name = "pgdump2sqlite"
version = "0.1.0"
edition = "2021"
authors = ["Ivan Gonzalez"]
description = "use a pgdump to create a sqlite db"
readme = "readme.md"
repository = "https://github.com/scratchmex/pgdump2sqlite"
license = "MIT OR Apache-2.0"
categories = ["database", "command-line-utilities"]
keywords = ["postgresql", "sqlite", "dump"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
itertools = "0.11.0"
pest = "2.7.5"
pest_derive = "2.7.5"
rusqlite = { version = "0.30.0", features = ["bundled"] }
thiserror = "1.0.50"
